<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Days--</string>
    <string name="default_date_format">MMM d, yyyy</string>

    <string name="christmas_day">Christmas Day</string>
    <string name="change_log">1. Revamped user interface.\n2. Now supported repeated countdowns.\n3. Added a list widget.\n4. More date format options.</string>
    <string name="build_year">2013</string>
    <string name="build_month">12</string>
    <string name="build_date">30</string>

    <string name="action_create">Create</string>
    <string name="action_settings" >Settings</string>
    <string name="action_rate" >Rate Days--</string>

	<string name="action_edit">Edit</string>
	<string name="action_delete">Delete</string>

	<string name="dialog_create">Create</string>
	<string name="dialog_set">Set</string>
	<string name="dialog_done">Done</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_title">Title</string>
	<string name="dialog_description">Description</string>
    <string name="dialog_alias_hint">Make an alias for display?</string>

    <string name="card_stripe">Color Stripe</string>
    <string name="card_title">Card Title</string>
    <string name="card_countdown">0</string>
    <string name="card_days_left">days left until</string>
    <string name="card_days_past">days passed since</string>
    <string name="card_description">Empty description</string>
    <string name="card_overflow">Overflow</string>

    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_yearly">Yearly</string>
    <string name="repeat_custom">X</string>
    <string name="repeat_custom_unit">" days"</string>

    <string name="widget_days_left">until</string>
    <string name="widget_days_past">since</string>
    <string name="widget_date_unknown">someday</string>

    <string name="message_empty_countdown_default">You don\'t have any countdown yet. Why not create a new one?</string>
    <string name="message_empty_countdown_widget">No countdown available</string>

    <string name="settings_cat_preference">Preference</string>
    <string name="settings_item_date_format_title">Choose date format</string>
    <string name="settings_item_date_format_summary">Choose how the date is displayed on cards</string>
    <string name="settings_item_hide_past_events_title">Hide past events</string>
    <string name="settings_item_hide_past_events_summary">Check to not display all past events in the countdown list</string>
    <string name="settings_item_past_events_at_tail_title">Put past events at the bottom</string>
    <string name="settings_item_past_events_at_tail_summary">Display past events at the tail of the list, after all future countdowns.</string>
    <string name="settings_item_no_changelog_title">No Change Logs</string>
    <string name="settings_item_no_changelog_summary">Do not automatically create change log countdowns for new features in future updates</string>

    <string name="settings_cat_about">About</string>
    <string name="settings_item_developer_title">Developer</string>
    <string name="settings_item_developer_summary">Joe Wu</string>
    <string name="settings_item_thanks_title">Special Thanks</string>
    <string name="settings_item_thanks_summary">Kijudai Aygin</string>
    <string name="settings_item_version_title">Version</string>

    <string name="error_too_many_days">Seriously, you need to count that many days?</string>

    <string name="widget_name_single">Days-- Single Widget</string>
    <string name="widget_name_list">Days-- List Widget</string>

    <string name="widget_loading_message">Loading...</string>

</resources>
