<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <PreferenceCategory android:title="@string/settings_cat_preference">

        <ListPreference android:id="@+id/settings_date_format"
            android:key="KEY_DATE_FORMAT"
            android:title="@string/settings_item_date_format_title"
            android:entries="@array/dateFormat"
            android:entryValues="@array/dateFormatValues"
            android:defaultValue="MMM d, yyyy" />

        <CheckBoxPreference android:id="@+id/settings_hide_past_events"
            android:defaultValue="false"
            android:key="KEY_HIDE_PAST_EVENTS"
            android:title="@string/settings_item_hide_past_events_title"
            android:summary="@string/settings_item_hide_past_events_summary" />

        <CheckBoxPreference android:id="@+id/settings_no_changelog"
            android:defaultValue="false"
            android:key="KEY_NO_CHANGELOG"
            android:title="@string/settings_item_no_changelog_title"
            android:summary="@string/settings_item_no_changelog_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_about">

        <Preference android:key="KEY_DEVELOPER"
            android:title="@string/settings_item_developer_title"
            android:summary="@string/settings_item_developer_summary" />

        <Preference android:key="KEY_THANKS"
            android:title="@string/settings_item_thanks_title"
            android:summary="@string/settings_item_thanks_summary" />

        <Preference android:key="KEY_VERSION"
            android:title="@string/settings_item_version_title" />

    </PreferenceCategory>

</PreferenceScreen>