<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/card_bg"
    android:paddingTop="8dp"
    android:paddingBottom="8dp" >

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="22dp" >

        <TextView android:id="@+id/tv_card_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/card_title"
            android:singleLine="true"
            android:textColor="@color/ics_red"
            android:textSize="24sp" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:background="@color/stroke" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >

            <TextView android:id="@+id/tv_card_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/card_countdown"
                android:textStyle="bold"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_card_countdown"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_marginLeft="8dp" >

                <TextView android:id="@+id/tv_card_days_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_days_left"
                    android:textSize="16sp" />

                <TextView android:id="@+id/tv_card_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/build_date"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <TextView android:id="@+id/tv_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ellipsize="end"
            android:text="@string/card_description"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>

    <View android:id="@+id/iv_card_stripe"
        android:layout_width="9dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/ll_content"
        android:layout_alignBottom="@id/ll_content"
        android:background="@color/ics_red" />

</RelativeLayout>