<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100" >

        <ImageView android:id="@+id/card_stripe"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@color/ics_red"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/card_stripe"
            android:scaleType="centerCrop" />

        <LinearLayout android:id="@+id/card_content_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_weight="90"
            android:orientation="vertical" >

            <TextView android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:text="@string/card_title"
                android:textColor="@color/ics_red"
                android:textSize="24sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/stroke" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView android:id="@+id/card_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:text="@string/card_countdown"
                    android:textStyle="bold"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:orientation="vertical" >

                    <TextView android:id="@+id/card_days_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="16sp" />

                    <TextView android:id="@+id/card_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView android:id="@+id/card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="16dip"
                android:ellipsize="end"
                android:text="@string/card_description"
                android:textColor="@color/grey"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:orientation="vertical" >

            <ImageView android:id="@+id/card_overflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_overflow"
                android:padding="2dip"
                android:src="@drawable/selectable_overflow_cardbank" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>